--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
             <artifactId>spring-expression</artifactId>
             <version>4.2.4.RELEASE</version>
         </dependency>
+        <!--引入aop联盟-->
         <dependency>
             <groupId>aopalliance</groupId>
             <artifactId>aopalliance</artifactId>
